[package]
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = 'build.rs'
edition = '2018'
name = 'sr-io'
version = '2.0.0'

[build-dependencies]
rustc_version = "0.2"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
libsecp256k1 = { version = "0.2.1", optional = true }
tiny-keccak = { version = "1.4.2", optional = true }
environmental = { version = "1.0.1", optional = true }

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-std'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-primitives'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.substrate-state-machine]
optional = true
git = 'https://github.com/paritytech/substrate'
package = 'substrate-state-machine'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.trie]
optional = true
git = 'https://github.com/paritytech/substrate'
package = 'substrate-trie'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.host_calls]
optional = true
path = '../host_calls/'

[dev-dependencies.substrate-offchain]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-offchain'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[features]
default = ["std"]
std = [
	"primitives/std",
	"codec/std",
	"rstd/std",
	"hash-db/std",
	"trie",
	"environmental",
	"substrate-state-machine",
	"libsecp256k1",
	"tiny-keccak",
	"host_calls",
]
nightly = []
strict = []
wasm-nice-panic-message = []
no_panic_handler = []
no_oom = []
