[package]
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = 'build.rs'
edition = '2018'
name = 'sr-io'
version = '2.0.0'

[build-dependencies]
rustc_version = "0.2"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
libsecp256k1 = { version = "0.2.1", optional = true }
tiny-keccak = { version = "1.4.2", optional = true }
environmental = { version = "1.0.1", default-features = false, optional = true }

sgx_tstd      = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk", features = ["untrusted_fs","net","backtrace"], optional = true}
sgx_types     = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk", optional = true}
sgx_log       = { package = "log", version = "0.4.7", git = "https://github.com/mesalock-linux/log-sgx", optional = true }

twox-hash = { version = "1.3.0", default-features = false, optional = true }

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'sr-std'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'substrate-primitives'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.substrate-state-machine]
optional = true
git = 'https://github.com/paritytech/substrate'
package = 'substrate-state-machine'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.trie]
optional = true
git = 'https://github.com/paritytech/substrate'
package = 'substrate-trie'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.host_calls]
optional = true
path = '../host_calls/'

#[dev-dependencies.substrate-offchain]
#git = 'https://github.com/paritytech/substrate'
#package = 'substrate-offchain'
#rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[features]
default = ["std"]
std = [
	"primitives/std",
	"codec/std",
	"rstd/std",
	"hash-db/std",
	"trie",
	"environmental/std",
	"substrate-state-machine",
	"libsecp256k1",
	"tiny-keccak",
]

enable_host_calls = [
	"host_calls"
]
sgx = [
	"sgx_tstd",
	"sgx_types",
	"sgx_log",
	"twox-hash",
	"environmental"
]
debug = []

nightly = []
strict = []
wasm-nice-panic-message = []
no_panic_handler = []
no_oom = []

[patch.'https://github.com/paritytech/substrate']
substrate-primitives = { git = "https://github.com/scs/substrate-api-client", branch = "no_std_rstd"}

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}
