[package]
name = "substrate-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
derive_more = "0.14.0"
parity-codec = "3.3"
wasmi = { version = "0.4.3" }
byteorder = "1.1"
lazy_static = "1.0"
parking_lot = "0.8.0"
log = "0.4"
libsecp256k1 = "0.2.1"
tiny-keccak = "1.4.2"

runtime_io = { package = "sr-io", path = "../sr-tee-io" }

#primitives = { package = "substrate-primitives", path = "../primitives" }
[dependencies.primitives]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-primitives'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#trie = { package = "substrate-trie", path = "../trie" }
[dependencies.trie]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-trie'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#serializer = { package = "substrate-serializer", path = "../serializer" }
[dependencies.serializer]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-serializer'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#state_machine = { package = "substrate-state-machine", path = "../state-machine"  }
[dependencies.state_machine]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-state-machine'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#runtime_version = { package = "sr-version", path = "../sr-version" }
[dependencies.runtime_version]
git = 'https://github.com/paritytech/substrate'
package = 'sr-version'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#panic-handler = { package = "substrate-panic-handler", path = "../panic-handler" }
[dependencies.panic-handler]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-panic-handler'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

[dependencies.host_calls]
path = '../host_calls'

[dev-dependencies]
assert_matches = "1.1"
wabt = "~0.7.4"
hex-literal = "0.2.0"

[features]
default = []
wasm-extern-trace = []
