[package]
name = "substrate-executor"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
derive_more = "0.14.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
runtime_io = { package = "sr-io", path = "../sr-tee-io" }
wasmi = { version = "0.5.0" }
parity-wasm = "0.31"
byteorder = "1.3"
lazy_static = "1.3"
parking_lot = "0.9.0"
log = "0.4"
libsecp256k1 = "0.2.1"
tiny-keccak = "1.4.2"


[dependencies.primitives]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-primitives'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.trie]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-trie'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.serializer]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-serializer'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.state_machine]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-state-machine'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.runtime_version]
git = 'https://github.com/paritytech/substrate'
package = 'sr-version'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.panic-handler]
git = 'https://github.com/paritytech/substrate'
package = 'substrate-panic-handler'
rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'

[dependencies.host_calls]
path = '../host_calls'

[dev-dependencies]
assert_matches = "1.1"
wabt = "~0.7.4"
hex-literal = "0.2.0"

[features]
default = []
wasm-extern-trace = []
