[package]
name = "substrate-executor"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
derive_more = "0.15.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
runtime_io = { package = "sr-io", path = "../sr-tee-io" }
wasmi = { version = "0.5.1" }
parity-wasm = "0.40.3"
lazy_static = "1.4.0"
parking_lot = "0.9.0"
log = "0.4.8"
libsecp256k1 = "0.3.0"
tiny-keccak = "1.5.0"

[dependencies.primitives]
git = 'https://github.com/scs/substrate'
package = 'substrate-primitives'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.trie]
git = 'https://github.com/scs/substrate'
package = 'substrate-trie'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.serializer]
git = 'https://github.com/scs/substrate'
package = 'substrate-serializer'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.state_machine]
git = 'https://github.com/scs/substrate'
package = 'substrate-state-machine'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.runtime_version]
git = 'https://github.com/scs/substrate'
package = 'sr-version'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.panic-handler]
git = 'https://github.com/scs/substrate'
package = 'substrate-panic-handler'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.wasm-interface]
git = 'https://github.com/scs/substrate'
package = "substrate-wasm-interface"
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'

[dependencies.host_calls]
path = '../host_calls'

[dev-dependencies]
assert_matches = "1.3.0"
wabt = "0.9.2"
hex-literal = "0.2.1"
runtime-test = { package = "substrate-runtime-test", git = 'https://github.com/scs/substrate', rev = 'f17d023bbe179f15678ac9989f471c9b18917e17' }
substrate-client = { git = 'https://github.com/scs/substrate', rev = 'f17d023bbe179f15678ac9989f471c9b18917e17' }
substrate-offchain = { git = 'https://github.com/scs/substrate', rev = 'f17d023bbe179f15678ac9989f471c9b18917e17' }
state_machine = { package = "substrate-state-machine", git = 'https://github.com/scs/substrate', rev = 'f17d023bbe179f15678ac9989f471c9b18917e17' }

[features]
default = []
wasm-extern-trace = []
