[package]
description = "Substratee offchain workers"
name = "substratee-offchain"
version = "2.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
log = "0.4"
parity-codec = { version = "3.3", features = ["derive"] }
parking_lot = "0.8.0"
tokio = "0.1.7"

#client = { package = "substrate-client", path = "../../core/client" }
[dependencies.client]
package = "substrate-client"
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#consensus = { package = "substrate-consensus-common", path = "../../core/consensus/common" }
[dependencies.consensus]
package = "substrate-consensus-common"
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#offchain-primitives = { package = "substrate-offchain-primitives", path = "./primitives" }
[dependencies.offchain-primitives]
package = "substrate-offchain-primitives"
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#primitives = { package = "substrate-primitives", path = "../../core/primitives" }
[dependencies.primitives]
package = "substrate-primitives"
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'


#runtime_primitives = { package = "sr-primitives", path = "../../core/sr-primitives" }
[dependencies.runtime_primitives]
package = "sr-primitives"
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#transaction_pool = { package = "substrate-transaction-pool", path = "../../core/transaction-pool" }
[dependencies.transaction_pool]
package = "substrate-transaction-pool"
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

[dev-dependencies]
env_logger = "0.6"

#test-client = { package = "substrate-test-runtime-client", path = "../../core/test-runtime/client" }
[dev-dependencies.test-client]
package = "substrate-test-runtime-client"
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

[features]
default = []
