[package]
name = "pallet-substratee-registry"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"


[dependencies]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.frame-system]
default-features = false
package = 'frame-system'
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.6'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.6'

# added by SCS
[dependencies.host_calls]
default-features = false
package='substratee-registry-host-calls'
path = "./host-calls"

# added by SCS
[dev-dependencies.externalities]
package = "sp-externalities"
version = "0.8.0-alpha.6"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'host_calls/std',
]
