[dependencies.substratee-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substratee-node-runtime/std']

[package]
authors = ['Supercomputing Systems']
edition = '2018'
name = 'substratee-node-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
