[dependencies.substratee-node-runtime]
default-features = false
path = '..'

[package]
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = '2018'
name = 'substratee-node-runtime-wasm'
version = '2.0.0'

[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['substratee-node-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []

[patch.'https://github.com/paritytech/substrate#sr-io']
sr-io = { path = 'sr-tee-io' }

[patch.'https://github.com/paritytech/substrate#substrate-executor']
substrate-executor = { path = 'substratee-executor' }