[package]
name = "runtime-test"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
runtime_io = { package = "sr-io", path = "../../sr-io", default-features = false }

#sandbox = { package = "sr-sandbox", path = "../../sr-sandbox", default-features = false }
[dependencies.sandbox]
default-features = false
package = 'sr-sandbox'
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

#substrate-primitives = { path = "../../primitives", default-features = false }
[dependencies.substrate-primitives]
default-features = false
package = 'substrate-primitives'
git = 'https://github.com/paritytech/substrate'
rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'

[patch.'https://github.com/paritytech/substrate#sr-io']
sr-io = { path = 'sr-tee-io' }

[patch.'https://github.com/paritytech/substrate#substrate-executor']
substrate-executor = { path = 'substratee-executor' }

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []

